--- a/resources.cfg
+++ b/resources.cfg
@@ -1,3 +1,4 @@
+ensure MP-Loading
 ensure oxmysql
 set mysql_connection_string "user=root;password=;host=localhost;port=3306;database=mp-framework;charset=utf8mb4"
 
@@ -9,6 +10,7 @@ ensure MP-Logs
 # # ensure MP-Admin
 ensure MP-Spawn
 ensure MP-Elements
+ensure [ox]
 # ensure clothing
 
 ensure mapmanager
