--- a/resources.cfg
+++ b/resources.cfg
@@ -11,7 +11,7 @@ ensure MP-Logs
 ensure MP-Spawn
 ensure MP-Elements
 ensure [ox]
-# ensure clothing
+ensure qb-clothing
 
 ensure mapmanager
 ensure chat
