working money system added

--- a/resources.cfg
+++ b/resources.cfg
@@ -1,6 +1,7 @@
 ensure MP-Loading
 ensure oxmysql
 set mysql_connection_string "user=root;password=;host=localhost;port=3306;database=mp-framework;charset=utf8mb4"
+add_ace resource.MP-Base command allow #allows admin commands
 
 
 
