--- a/resources.cfg
+++ b/resources.cfg
@@ -8,7 +8,7 @@ add_ace resource.MP-Base command allow #allows admin commands
 ensure MP-Base
 ensure PolyZone
 ensure MP-Logs
-# # ensure MP-Admin
+ensure MP-Commands
 ensure MP-Spawn
 ensure MP-Elements
 ensure [ox]
